feat: add resolve feature
