# helpfirst-fe/app/api/report/[id]/status/route.ts
@@ -1,0 +1,28 @@
+import { serverAxios } from "@/utils/axios";
+import { cookies } from "next/headers";
+import { NextResponse } from "next/server";
+
+export async function PATCH(
+  req: Request,
+  { params }: { params: { id: string } }
+) {
+  const data = await req.json();
+  try {
+    const res = await serverAxios.patch(
+      `/api/report/${params.id}/status`,
+      data,
+      {
+        headers: {
+          Authorization: `Bearer ${cookies().get("accessToken")?.value}`,
+        },
+      }
+    );
+    return NextResponse.json(res.data, {
+      status: res.status,
+    });
+  } catch (error: any) {
+    return NextResponse.json(error?.response?.data, {
+      status: error.response ? error.response.status : 500,
+    });
+  }
+}
